[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bingus Assets/graphics/gradius.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Fades/Fadeout.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOver/ButtonPress.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[node name="GameOver" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 11.0
one_shot = true
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -25.5
margin_right = 212.5
margin_bottom = 25.5
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 425.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1

[node name="Fadeout" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="ButtonPress" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.1
one_shot = true
script = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ButtonPress" to="." method="_on_ButtonPress_timeout"]
